[gd_scene load_steps=16 format=3 uid="uid://cue0wxgylv724"]

[ext_resource type="Theme" uid="uid://bh6jkjg5lp1j6" path="res://nodes/gui/nums.tres" id="1_hc0ds"]
[ext_resource type="Script" path="res://scenes/match_scene.gd" id="2_ai8h2"]
[ext_resource type="Texture2D" uid="uid://cl7dr6ykbo52a" path="res://assets/login_s.png" id="2_oauje"]
[ext_resource type="Texture2D" uid="uid://bhtm3q05lpasj" path="res://assets/login.png" id="3_22kij"]
[ext_resource type="Script" path="res://nodes/gui/IconButton.gd" id="3_hx1io"]
[ext_resource type="Texture2D" uid="uid://swgmr2watbgj" path="res://assets/face/DD162.png" id="4_8sl63"]
[ext_resource type="Theme" uid="uid://pps1e7pbv6aj" path="res://nodes/gui/button.tres" id="4_uvie1"]
[ext_resource type="Texture2D" uid="uid://b2rp8a62wr2rq" path="res://assets/FREEUIASSETPACK_BY@CAMTATZ/Buttons/BTN_PLAIN (6).png" id="5_b4k28"]
[ext_resource type="Texture2D" uid="uid://bdy675ao4fwp2" path="res://assets/face/DD163.png" id="5_bitpw"]
[ext_resource type="Texture2D" uid="uid://bqv6gtwkqqwcb" path="res://assets/face/DD167.png" id="6_anxik"]
[ext_resource type="PackedScene" uid="uid://cm7u1q1xcgxl" path="res://nodes/gui/userinfo.tscn" id="6_pb4t4"]
[ext_resource type="Texture2D" uid="uid://ccbcn8638j4l6" path="res://assets/FREEUIASSETPACK_BY@CAMTATZ/Symbols & Text/SYMB_AWARD.png" id="7_jp30b"]
[ext_resource type="PackedScene" uid="uid://6chhdvyh5u60" path="res://nodes/gui/invite.tscn" id="9_7lv6p"]
[ext_resource type="Texture2D" uid="uid://bfrmbnjuyea6n" path="res://assets/FREEUIASSETPACK_BY@CAMTATZ/Symbols & Text/SYMB_ BIGX.png" id="9_oxdmq"]
[ext_resource type="PackedScene" uid="uid://c6q64lqanqq1f" path="res://nodes/gui/inviteme.tscn" id="10_td4qf"]

[node name="Match" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_hc0ds")
script = ExtResource("2_ai8h2")
textures = Array[Texture2D]([ExtResource("3_22kij"), ExtResource("4_8sl63"), ExtResource("5_bitpw"), ExtResource("6_anxik")])

[node name="MaxScore" type="Label" parent="."]
layout_mode = 0
offset_left = 176.0
offset_top = 144.0
offset_right = 451.0
offset_bottom = 183.0
theme_override_font_sizes/font_size = 32
text = "MAX: 1000"

[node name="Back" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 24.0
offset_top = 24.0
offset_right = 144.0
offset_bottom = 144.0
texture_normal = ExtResource("2_oauje")
ignore_texture_size = true
stretch_mode = 0
flip_h = true
script = ExtResource("3_hx1io")

[node name="History" type="Button" parent="."]
layout_mode = 0
offset_left = 216.0
offset_top = 40.0
offset_right = 459.0
offset_bottom = 120.094
theme = ExtResource("4_uvie1")
text = "HISTORY"

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 0
offset_left = 32.0
offset_top = 216.0
offset_right = 448.0
offset_bottom = 592.0
texture = ExtResource("5_b4k28")
region_rect = Rect2(0, 0, 69, 52)
patch_margin_left = 27
patch_margin_top = 11
patch_margin_right = 25
patch_margin_bottom = 15

[node name="Userinfo1" parent="NinePatchRect" instance=ExtResource("6_pb4t4")]
offset_left = 32.0
offset_top = 40.0
offset_right = 144.0
offset_bottom = 160.0

[node name="TextureRect" type="TextureRect" parent="NinePatchRect/Userinfo1"]
layout_mode = 1
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("7_jp30b")
expand_mode = 1

[node name="Userinfo2" parent="NinePatchRect" instance=ExtResource("6_pb4t4")]
offset_left = 160.0
offset_top = 40.0
offset_right = 272.0
offset_bottom = 160.0

[node name="closeUser2" type="TextureButton" parent="NinePatchRect/Userinfo2" groups=["closeUser"]]
layout_mode = 1
offset_right = 40.0
offset_bottom = 40.0
texture_normal = ExtResource("9_oxdmq")
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("3_hx1io")

[node name="Userinfo3" parent="NinePatchRect" instance=ExtResource("6_pb4t4")]
offset_left = 288.0
offset_top = 40.0
offset_right = 308.0
offset_bottom = 60.0

[node name="closeUser3" type="TextureButton" parent="NinePatchRect/Userinfo3" groups=["closeUser"]]
layout_mode = 1
offset_right = 40.0
offset_bottom = 40.0
texture_normal = ExtResource("9_oxdmq")
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("3_hx1io")

[node name="Userinfo4" parent="NinePatchRect" instance=ExtResource("6_pb4t4")]
offset_left = 32.0
offset_top = 200.0
offset_right = 144.0
offset_bottom = 320.0

[node name="closeUser4" type="TextureButton" parent="NinePatchRect/Userinfo4" groups=["closeUser"]]
layout_mode = 1
offset_right = 40.0
offset_bottom = 40.0
texture_normal = ExtResource("9_oxdmq")
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("3_hx1io")

[node name="Userinfo5" parent="NinePatchRect" instance=ExtResource("6_pb4t4")]
offset_left = 160.0
offset_top = 200.0
offset_right = 272.0
offset_bottom = 320.0

[node name="closeUser5" type="TextureButton" parent="NinePatchRect/Userinfo5" groups=["closeUser"]]
layout_mode = 1
offset_right = 40.0
offset_bottom = 40.0
texture_normal = ExtResource("9_oxdmq")
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("3_hx1io")

[node name="Userinfo6" parent="NinePatchRect" instance=ExtResource("6_pb4t4")]
offset_left = 288.0
offset_top = 200.0
offset_right = 308.0
offset_bottom = 220.0

[node name="closeUser6" type="TextureButton" parent="NinePatchRect/Userinfo6" groups=["closeUser"]]
layout_mode = 1
offset_right = 40.0
offset_bottom = 40.0
texture_normal = ExtResource("9_oxdmq")
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("3_hx1io")

[node name="Quit" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 264.0
offset_top = 640.0
offset_right = 445.0
offset_bottom = 720.094
theme = ExtResource("4_uvie1")
text = "LEAVE
"

[node name="Start" type="Button" parent="."]
layout_mode = 0
offset_left = 264.0
offset_top = 640.0
offset_right = 445.0
offset_bottom = 720.094
theme = ExtResource("4_uvie1")
text = "START"

[node name="Invite" type="Button" parent="."]
layout_mode = 0
offset_left = 40.0
offset_top = 640.0
offset_right = 246.0
offset_bottom = 720.094
theme = ExtResource("4_uvie1")
text = "INVITE"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Invite" parent="CanvasLayer" instance=ExtResource("9_7lv6p")]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -136.0
offset_top = -76.0
offset_right = 136.0
offset_bottom = 76.0
grow_horizontal = 2
grow_vertical = 2

[node name="InviteMe" parent="CanvasLayer" instance=ExtResource("10_td4qf")]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = -76.0
offset_right = 128.0
offset_bottom = 76.0
grow_horizontal = 2
grow_vertical = 2

[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Invite" to="." method="_on_invite_pressed"]
[connection signal="invite_one" from="CanvasLayer/Invite" to="." method="invite_room"]
